--- a/DockerBuildContainers/Ubuntu2004-RegressionTests/Dockerfile
+++ b/DockerBuildContainers/Ubuntu2004-RegressionTests/Dockerfile
@@ -7,14 +7,14 @@ RUN apt-get update
 RUN apt-get -qq install -y lsb-release
 
 #install the latest (C++20 compat g++11 or later)
-RUN apt-get -qq install -y g++-11 g++-12
+RUN apt-get -qq install -y g++-11
 
 #install the latest (C++20 compat) clang compilers (and libs)
 # must include clang++-VERSION on different lines due to issue with some python dependency
 # UNCLEAR why some interdependency - cannot install different versions of libc++-10-dev at the same time??
 # See https://stackoverflow.com/questions/61165575/how-can-i-install-multiple-versions-of-llvm-libc-on-the-same-computer-at-the-s
-RUN apt-get -qq install -y clang++-10
-RUN apt-get -qq install -y libc++-10-dev libc++abi-10-dev
+RUN apt-get -qq install -y clang++-10 clang++-11 clang++-12
+RUN apt-get -qq install -y libc++-12-dev libc++abi-12-dev
 
 # for testing configuration 'only-zlib-system-third-party-component'
 RUN apt-get -qq install -y zlib1g-dev
