fixed build of buntu2004-RegressionTests/Dockerfile for clang++10/11/12

--- a/DockerBuildContainers/Ubuntu2004-RegressionTests/Dockerfile
+++ b/DockerBuildContainers/Ubuntu2004-RegressionTests/Dockerfile
@@ -13,7 +13,9 @@ RUN apt-get -qq install -y g++-11
 # must include clang++-VERSION on different lines due to issue with some python dependency
 # UNCLEAR why some interdependency - cannot install different versions of libc++-10-dev at the same time??
 # See https://stackoverflow.com/questions/61165575/how-can-i-install-multiple-versions-of-llvm-libc-on-the-same-computer-at-the-s
-RUN apt-get -qq install -y clang++-10 clang++-11 clang++-12
+RUN apt-get -qq install -y clang++-10
+RUN apt-get -qq install -y clang++-11
+RUN apt-get -qq install -y clang++-12
 RUN apt-get -qq install -y libc++-12-dev libc++abi-12-dev
 
 # for testing configuration 'only-zlib-system-third-party-component'
