--- a/.github/workflows/build-N-test-v3-Dev.yml
+++ b/.github/workflows/build-N-test-v3-Dev.yml
@@ -239,6 +239,7 @@ jobs:
           brew install gnu-sed
           brew install p7zip
           brew install automake
+          brew install pkg-config
           make install-realpath
       - name: Configure
         run: |
