For windows docker containers: Upped visual studio installer verison to VS_17_5_2; upped MSYS_20230127; and providered workaround to failed install of ATLMFC for vs2k22 17.5.x

--- a/DockerBuildContainers/Makefile
+++ b/DockerBuildContainers/Makefile
@@ -33,15 +33,16 @@ ifeq (${DETECTED_HOST_OS},Linux)
 	docker build -f Stroika-Dev/Dockerfile -t sophistsolutionsinc/stroika-dev-2204 --build-arg BASED_ON_IMAGE=sophistsolutionsinc/stroika-buildvm-ubuntu2204-regression-tests .
 endif
 ifneq ($(findstring $(DETECTED_HOST_OS),MSYS-Cygwin),)
-	# to build this you may need  --storage-opts "size 100GB", but that currently doesn't work with build, so set
-	# in docker windows configuration settings (can get from docker gui - settings/Docker Engine)
-	# Build with -m 4GB cuz default of 1GB pages alot
-	# Due to https://stroika.atlassian.net/browse/STK-742 - add   --network "Default Switch" 
-	#docker build -m 4GB --network "Default Switch" -f Windows-Cygwin-VS2k19/Dockerfile -t sophistsolutionsinc/stroika-buildvm-windows-cygwin-vs2k19 .
-	# as of 2021-09-20 - on new laptop  fails to build with -m, but works without (crazy buggy docker)
+	@# to build this you may need  --storage-opts "size 100GB", but that currently doesn't work with build, so set
+	@# in docker windows configuration settings (can get from docker gui - settings/Docker Engine)
+	@# Build with -m 4GB cuz default of 1GB pages alot
+	@# Due to https://stroika.atlassian.net/browse/STK-742 - add   --network "Default Switch" 
+	@#docker build -m 4GB --network "Default Switch" -f Windows-Cygwin-VS2k19/Dockerfile -t sophistsolutionsinc/stroika-buildvm-windows-cygwin-vs2k19 .
+	@# as of 2021-09-20 - on new laptop  fails to build with -m, but works without (crazy buggy docker)
 	docker build --network "Default Switch" -f Windows-Cygwin-VS2k19/Dockerfile -t sophistsolutionsinc/stroika-buildvm-windows-cygwin-vs2k19 .
 	docker build --network "Default Switch" -f Windows-Cygwin-VS2k22/Dockerfile -t sophistsolutionsinc/stroika-buildvm-windows-cygwin-vs2k22 .
-	echo "BEWARE DOCKER BUG: https://stroika.atlassian.net/browse/STK-766 - see that for instructions on workaorund for hang building MSYS containers"
+	@echo "BEWARE DOCKER BUG: https://stroika.atlassian.net/browse/STK-766 - see that for instructions on workaorund for hang building MSYS containers"
+	@echo "***may need todo rm -rf hcs*/Files/'\$Recycle.Bin' when docker build hangs"
 	docker build --network "Default Switch" -f Windows-MSYS-VS2k19/Dockerfile -t sophistsolutionsinc/stroika-buildvm-windows-msys-vs2k19 .
 	docker build --network "Default Switch" -f Windows-MSYS-VS2k22/Dockerfile -t sophistsolutionsinc/stroika-buildvm-windows-msys-vs2k22 .
 endif
