--- a/.github/workflows/build-N-test-v2.1-Dev.yml
+++ b/.github/workflows/build-N-test-v2.1-Dev.yml
@@ -237,6 +237,7 @@ jobs:
           path: |
             Builds/Stroika-Doxygen-Help.tar.gz
       - name: Archive Log Results
+        if: always()
         uses: actions/upload-artifact@v3
         with:
           name: Log Data (${{ matrix.displayTargetName }})
@@ -313,6 +314,7 @@ jobs:
         run: |
           df -h
       - name: Archive Log Results
+        if: always()
         uses: actions/upload-artifact@v3
         with:
           name: Log Results (${{ matrix.displayTargetName }})
@@ -446,6 +448,7 @@ jobs:
           docker cp buildContainer:Stroika/TRACE_LOGS $ARTIFACTS_DIR 2> /dev/null
           rm -rf $ARTIFACTS_DIR/{ThirdPartyComponents,Tests,*.lib}
       - name: Archive Log Results
+        if: always()
         uses: actions/upload-artifact@v3
         with:
           name: Log Results (${{ matrix.displayTargetName }})
