--- a/.github/workflows/build-v3-Docker-Containers.yml
+++ b/.github/workflows/build-v3-Docker-Containers.yml
@@ -17,10 +17,10 @@ jobs:
       - uses: actions/checkout@v3
       - name: Build Linux Container Images
         run: |
-          cd DockerBuildContainers |
-          make pull-base-images |
-          make build-images |
-          make tag-images |
+          cd DockerBuildContainers; |
+          make pull-base-images; |
+          make build-images; |
+          make tag-images; |
           make push-images
   build-Windows:
     runs-on: windows-latest
@@ -28,8 +28,8 @@ jobs:
       - uses: actions/checkout@v3
       - name: Build Windows Container Images
         run: |
-          cd DockerBuildContainers |
-          make pull-base-images |
-          make build-images |
-          make tag-images |
+          cd DockerBuildContainers; |
+          make pull-base-images; |
+          make build-images; |
+          make tag-images; |
           make push-images
