fixed bash_profile docker build windows

--- a/.gitattributes
+++ b/.gitattributes
@@ -1,6 +1,7 @@
 # Set the default behavior, in case people don't have core.autocrlf set.
 * text=auto
 
+.bash_profile text eol=lf diff
 *.inf text eol=crlf diff
 *.spec text eol=lf diff
 *.control text eol=lf
