--- a/.github/workflows/build-v3-Docker-Containers.yml
+++ b/.github/workflows/build-v3-Docker-Containers.yml
@@ -17,7 +17,7 @@ jobs:
       - uses: actions/checkout@v3
       - name: Build Linux Container Images
         run: |
-          make --directory DockerBuildContainers pull-base-images
+          make --directory DockerBuildContainers make pull-base-images
           make --directory DockerBuildContainers make build-images
           make --directory DockerBuildContainers make tag-images
           make --directory DockerBuildContainers make push-images
@@ -27,7 +27,7 @@ jobs:
       - uses: actions/checkout@v3
       - name: Build Windows Container Images
         run: |
-          make --directory DockerBuildContainers pull-base-images
+          make --directory DockerBuildContainers make pull-base-images
           make --directory DockerBuildContainers make build-images
           make --directory DockerBuildContainers make tag-images
           make --directory DockerBuildContainers make push-images
