--- a/DockerBuildContainers/Makefile
+++ b/DockerBuildContainers/Makefile
@@ -77,6 +77,7 @@ endif
 
 
 pull-base-images:
+$(info TO DEBUG WINDOW CONTAINER BUILD: DETECTED_HOST_OS=$(DETECTED_HOST_OS))
 ifeq (${DETECTED_HOST_OS},Linux)
 	docker pull ubuntu:20.04
 	docker pull ubuntu:22.04
