--- a/.github/workflows/build-v3-Docker-Containers.yml
+++ b/.github/workflows/build-v3-Docker-Containers.yml
@@ -52,7 +52,7 @@ jobs:
           echo "DetectedHostOS: `./ScriptsLib/DetectedHostOS`"
           echo NUMBER_OF_PROCESSORS=$NUMBER_OF_PROCESSORS
       - name: Update PATH
-        - run: |
+        run: |
           echo PATH=${PATH}
           echo GITHUB_PATH=${GITHUB_PATH}
           echo "c:/Program Files/git/bin/" >> $GITHUB_PATH
