--- a/.github/workflows/build-v3-Docker-Containers.yml
+++ b/.github/workflows/build-v3-Docker-Containers.yml
@@ -52,10 +52,12 @@ jobs:
           echo "DetectedHostOS: `./ScriptsLib/DetectedHostOS`"
           echo NUMBER_OF_PROCESSORS=$NUMBER_OF_PROCESSORS
       - name: Update PATH
+        shell: "cmd"
         run: |
           echo PATH=${PATH}
           echo GITHUB_PATH=${GITHUB_PATH}
-          echo "c:/Program Files/git/bin/" >> $GITHUB_PATH
+          echo "c:/Program Files/git/usr/bin/" >> $GITHUB_PATH
+          where bash
       - name: Build Windows Container Images
         run: |
           make --directory DockerBuildContainers pull-base-images
