--- a/.github/workflows/build-v3-Docker-Containers.yml
+++ b/.github/workflows/build-v3-Docker-Containers.yml
@@ -54,9 +54,9 @@ jobs:
       - name: Update PATH
         shell: "cmd"
         run: |
-          echo PATH=${PATH}
-          echo GITHUB_PATH=${GITHUB_PATH}
-          echo "c:/Program Files/git/usr/bin/" >> $GITHUB_PATH
+          echo PATH=%PATH%
+          echo GITHUB_PATH=%GITHUB_PATH%
+          echo "c:/Program Files/git/usr/bin/" >> %GITHUB_PATH%
           where bash
       - name: Build Windows Container Images
         shell: "bash"
