--- a/.github/workflows/build-v3-Docker-Containers.yml
+++ b/.github/workflows/build-v3-Docker-Containers.yml
@@ -56,7 +56,16 @@ jobs:
         run: |
           echo PATH=%PATH%
           echo GITHUB_PATH=%GITHUB_PATH%
-          echo "c:/Program Files/git/usr/bin/" >> %GITHUB_PATH%
+          echo "c:/Program Files/git/usr/bin/" >> tmpPathUpdate
+          type %GITHUB_PATH% >> tmpPathUpdate
+          copy tmpPathUpdate %GITHUB_PATH%
+          del tmpPathUpdate
+          where bash
+      - name: Update PATH PS:
+        shell: "pwsh"
+        run: |
+          where bash
+          echo "c:/Program Files/git/usr/bin/" | Out-File -Append -FilePath $env:GITHUB_PATH -Encoding utf8
           where bash
       - name: Build Windows Container Images
         shell: "bash"
