--- a/.github/workflows/build-v3-Docker-Containers.yml
+++ b/.github/workflows/build-v3-Docker-Containers.yml
@@ -51,7 +51,7 @@ jobs:
           where bash
           echo "DetectedHostOS: `./ScriptsLib/DetectedHostOS`"
           echo NUMBER_OF_PROCESSORS=$NUMBER_OF_PROCESSORS
-      - name: Update PATH
+      - name: Update PATH (wrong bash in path by default, sad seems hard to update path in github actions)
         shell: "cmd"
         run: |
           echo PATH=%PATH%
@@ -60,10 +60,13 @@ jobs:
           type %GITHUB_PATH% >> tmpPathUpdate
           copy tmpPathUpdate %GITHUB_PATH%
           del tmpPathUpdate
-          where bash
+          echo "wherebash:" && where bash
+          set PATH="c:/Program Files/git/usr/bin/;%PATH%"
+          echo "wherebash:" && where bash
       - name: Build Windows Container Images
         shell: "bash"
         run: |
+          echo "wherebash:" && where bash
           make --directory DockerBuildContainers pull-base-images
           make --directory DockerBuildContainers build-images
           make --directory DockerBuildContainers tag-images
